[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://imgs/enemy_sprites/spider.png" type="Texture" id=3]
[ext_resource path="res://scenes/Spider_Enemy.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 9 )

[node name="Spider" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="LeftCast" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -31, 0 )

[node name="RightCast" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 31, 0 )

[node name="DownCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 31 )

[node name="UpCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 14 )
animation = "idle"
frame = 1
playing = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 4 )
shape = SubResource( 8 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]

[editable path="Hurtbox"]
